# fizmo

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pi.yml
config/: robot.ini
deploy/: deploy-pi.sh  fizmo.service  install-service.sh
docs/: deployment.md
docs/adr/: 0001-runtime-architecture.md  0002-tool-behavior-boundary.md  0003-repository-structure.md  0004-configuration-policy.md  0005-ci-cd-pipeline.md
fizmo/: __init__.py  config.py  conversation.py  logging.py  models.py  runtime.py  servo_math.py
fizmo/ai/: __init__.py  interfaces.py  mock.py
fizmo/behavior/: __init__.py  deterministic.py  models.py
fizmo/cli/: __init__.py  calibrate_servos.py  converse.py  listen.py  logs.py  read_imu.py  run_tool.py  service.py
fizmo/hardware/: __init__.py  interfaces.py  microphone.py  mock.py  mpu6050.py  pca9685.py
fizmo/state/: __init__.py  estimator.py  imu_filter.py
fizmo/tools/: __init__.py  body.py  calibration.py  display.py
tests/: test_audio.py  test_conversation.py
