[project]
name = "fizmo"
version = "0.1.0"
description = "Raspberry Pi robot runtime for the Fizmo embodied agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
pi = [
    "adafruit-blinka",
    "adafruit-circuitpython-pca9685",
    "smbus2",
]
sim = [
    "gymnasium",
    "numpy",
    "pybullet",
    "stable-baselines3",
]

[project.scripts]
fizmo-calibrate-servos = "fizmo.cli.calibrate_servos:main"
fizmo-logs = "fizmo.cli.logs:main"
fizmo-read-imu = "fizmo.cli.read_imu:main"
fizmo-run-tool = "fizmo.cli.run_tool:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fizmo*"]
